--- a/server/package.json
+++ b/server/package.json
@@ -14,14 +14,20 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@pinecone-database/pinecone": "^6.1.3",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
+    "mammoth": "^1.11.0",
     "mongoose": "^9.1.3",
     "multer": "^2.0.2",
     "openai": "^6.16.0",
     "pdf-extraction": "^1.0.2",
-    "uuid": "^13.0.0"
+    "pdfkit": "^0.17.2",
+    "tesseract.js": "^7.0.0",
+    "uuid": "^13.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
