--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.12.0",
     "tailwind-merge": "^3.4.0",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
