--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@pinecone-database/pinecone": "^6.1.3",
+    "axios": "^1.13.5",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
@@ -22,6 +24,7 @@
     "mammoth": "^1.11.0",
     "mongoose": "^9.1.3",
     "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "openai": "^6.16.0",
     "pdf-extraction": "^1.0.2",
     "pdfkit": "^0.17.2",
