--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^9.1.3",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^8.0.1",
     "openai": "^6.16.0",
     "pdf-extraction": "^1.0.2",
     "pdfkit": "^0.17.2",
